--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          extras_css: |
+            body {
+            color: #FFFFFF;
+              }
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
