--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           extras_css: |
             div {
+            align: center;
             color: #e5edf3;
               }
           # Your GitHub token
